<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Museo Judica</string>
    <string name="action_settings">action_settings</string>

    <string name="main_title1">Museo Argheologico</string>
    <string name="main_title2">Gabriele Judica</string>
    <string name="language">selezionare la lingua</string>
    <string name="language_sel">Lingua Selezionata: ITALIANO</string>
    <string name="italiano">Italiano</string>
    <string name="inglese">English</string>
    <string name="francese">French</string>
    
    <string name="nav_home">Home</string>
    <string name="nav_home_desc">Ritorna alla schermata principale</string>
    <string name="nav_cards">Opere</string>
    <string name="nav_cards_desc">Ricerca Opere</string>
    <string name="nav_info">Sale</string>
    <string name="nav_info_desc">Percorso espositivo e mappa</string>
    <string name="nav_back">Indietro</string>
    <string name="nav_back_desc">Torna indietro</string>


    <string name="nav_floor0">Piano Terra</string>
    <string name="nav_floor1">Primo Piano</string>
    <string name="nav_room">Sala</string>
    <string name="nav_prev_item">Opera Prec</string>
    <string name="nav_next_item">Opera Succ</string>
    <string name="piano">Piano</string>
    <string name="sala">Sala</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="main_btn_infomuseo">Informazioni Utili</string>
    <string name="main_btn_info">Sale e Mappa</string>
    <string name="main_btn_cards">Ricerca Opere</string>
    <string name="main_btn_akrai">Akrai</string>
    <string name="main_btn_judica">Collezione Judica</string>
    <string name="main_btn_palazzolo">Palazzolo Acreide</string>
    <string name="main_btn_language">Selezione Lingua</string>
    <string name="main_btn_infoapp">Informazioni App</string>
    <string name="main_txt_guide">Guida Multimediale</string>
    <string name="main_txt_turistic">Informazioni Turistiche</string>
    <string name="main_txt_documentation">Documentazione</string>
    <string name="main_txt_utility">Utilità</string>
    
    <string name="title_activity_desc_view">DescViewActivity</string>
    
    <string name="title_activity_card_list">CardListActivity</string>
    <string name="codice_opera">Codice Reperto</string>


</resources>