<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/black">
    <RelativeLayout
            android:id="@+id/sectionViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black">
        <TextView
                android:id="@+id/sectionViewTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@android:color/holo_green_dark"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"/>
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/sectionViewListField"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_below="@id/sectionViewTitle">
        <ListView
                android:id="@+id/sectionViewList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#88000000"
                android:padding="20dp"
                android:scrollbarStyle="insideOverlay" >
        </ListView>
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/sectionViewDescrField"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_below="@id/sectionViewListField">
        <ScrollView
                android:id="@+id/sectionViewContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/cardViewTitle">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/sectionViewDescr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cardViewImage"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:layout_margin="10dp"
                        android:padding="10dp"/>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
    <LinearLayout
            android:id="@+id/nav_bottom"
            style="@style/layoutNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal" >

        <Button
                android:id="@+id/btn_nav_home"
                style="@style/buttonNav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nav_home_desc"
                android:drawableLeft="@drawable/ic_home_museum"
                android:onClick="btn_nav_home_click"
                android:text="@string/nav_home" />

        <Button
                android:id="@+id/btn_nav_cards"
                style="@style/buttonNav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nav_cards_desc"
                android:drawableLeft="@drawable/ic_cards"
                android:onClick="btn_nav_cards_click"
                android:text="@string/nav_cards" />

        <Button
                android:id="@+id/btn_nav_info"
                style="@style/buttonNav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nav_info_desc"
                android:drawableLeft="@drawable/ic_info"
                android:onClick="btn_nav_info_click"
                android:text="Map" />

        <Button
                android:id="@+id/btn_nav_back"
                style="@style/buttonNav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nav_back_desc"
                android:drawableLeft="@drawable/ic_navigation_back"
                android:onClick="btn_nav_back_click"
                android:text="@string/nav_back" />
    </LinearLayout>

</RelativeLayout>