<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/black">
    <RelativeLayout
            android:id="@+id/roomViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_transp">
        <TextView
                android:id="@+id/roomViewTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textColor="@android:color/primary_text_dark"
            android:text="TITLE"
            android:layout_marginLeft="22dp"
            android:layout_marginStart="22dp"
            android:layout_alignTop="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/ic_info"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/roomViewDescrField"
            android:layout_width="match_parent"
            android:layout_height="450dp"
        android:layout_below="@+id/roomViewTitle"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <ScrollView
                android:id="@+id/roomViewContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
            android:layout_alignParentBottom="true">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/roomViewDescr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cardViewImage"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:layout_margin="10dp"
                        android:padding="10dp"/>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/roomViewListField"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
        android:layout_above="@+id/nav_bottom"
        android:layout_below="@+id/roomViewDescrField">
        <ListView
                android:id="@+id/roomViewList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#88000000"
                android:padding="20dp"
                android:scrollbarStyle="insideOverlay"
            android:layout_alignParentBottom="true">
        </ListView>
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/nav_bottom"
            style="@style/layoutNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal" >

        <Button
                android:id="@+id/btn_nav_home"
                style="@style/buttonNav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nav_home_desc"
                android:drawableLeft="@drawable/ic_home_museum"
                android:onClick="btn_nav_home_click"
                android:text="@string/nav_home" />

        <Button
                android:id="@+id/btn_nav_cards"
                style="@style/buttonNav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nav_cards_desc"
                android:drawableLeft="@drawable/ic_search"
                android:onClick="btn_nav_cards_click"
                android:text="@string/nav_cards" />

        <Button
                android:id="@+id/btn_nav_info"
                style="@style/buttonNav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nav_info_desc"
                android:drawableLeft="@drawable/ic_ic_map"
                android:onClick="btn_nav_info_click"
                android:text="@string/nav_info" />

        <Button
                android:id="@+id/btn_nav_back"
                style="@style/buttonNav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nav_back_desc"
                android:drawableLeft="@drawable/ic_navigation_back"
                android:onClick="btn_nav_back_click"
                android:text="@string/nav_back" />
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="719dp" />
</RelativeLayout>